[package]
name = "air-pulse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"  # For making API requests
tokio = { version = "1", features = ["full"] }  # Async runtime
serde = "1.0"  # Serialization and Deserialization
serde_json = "1.0"  # JSON support

